public class EnlingoApp {
    public static void main(String[] args) {
        System.out.println("spielbeginn");
    }
}
