package mainMenu;ackage mainMenu;

public class MainMenuControl {
private MainMenuView view;
public MainMenuControl(MainMenuView view) {

}
