package questionManager;

public class QuestionManagerModel {
}
