package questionManager;

public class QuestionManagerView {
}
