package Code.src.quizGame;

public class QuizGameModel {
}
