package Code.src.quizGame;

public class QuizGameView {
}
