package wordleGame;

public abstract class WordleGameView {

}
