@startuml
class EnlingoApp {
    +{static}main(String[] args): void
}

package mainMenu {
class MainMenuControl {
    +showMainMenu(): void
    +navigateToQuizGame(): void
    +navigateToWordleGame(): void
    +navigateToQuestionManager(): void
}

class MainMenuView {
    -components: List<JComponent>
    +displayMainMenu(): void
}
}


package quizGame {
class QuizGameModel {
    +loadQuestions()
    +getNextQuestion(): Question
    +checkAnswer(question: Question, answer: String): boolean
}

class QuizGameView {
    -components: List<JComponent>
    +displayQuestion(question: Question)
    +showResult(isCorrect: boolean)
}

class QuizGameController {

    +startGame()
    +nextQuestion()
    +submitAnswer(answer: String)
}
}

package wordleGame {
class WordleGameModel {
    -targetWord: String
    +generateWord()
    +validateGuess(guess: String): List<Character>
}

class WordleGameView {
    -components: List<JComponent>
    +displayGame()
    +showGuessResult(List<Character>)
}

class WordleGameController {
    +startGame()
    +submitGuess(guess: String)
}
}

package questionManager {
class QuestionManagerController {
    +addQuestion(question: Question)
    +removeQuestion(questionId: int)
    +getAllQuestions(): List<Question>
}

class QuestionManagerView {
    -components: List<JComponent>
    +displayQuestionList(List<Question>)
    +showAddQuestionForm()
    +showRemoveConfirmation()
}

class QuestionManagerModel {
    +addQuestion(question: Question)
    +removeQuestion(questionId: int)
    +getAllQuestions(): List<Question>
}
}

package database <<Database>> {
class DatabaseManager {
    +{static}fileLocation: String
    +{static}addQuestion(question: Question)
    +{static}removeQuestion(questionId: int)
    +{static}getAllQuestions(): List<Question>
    +{static}getRandomQuestion(): Question
}

entity QuestionsDB <<database>>  {
    ~questions: Table<Question>
}
}

package shared {
class Question {
    -id: int
    -text: String
    -correctAnswer: String
    +getId(): int
    +getText(): String
    +getCorrectAnswer(): String
    +toString(): String
}
}

EnlingoApp --> MainMenuControl: <<entry point>>
MainMenuControl "1" --> "-view" MainMenuView
MainMenuControl <..> QuizGameController : <navigate>
MainMenuControl <..> WordleGameController : <navigate>
MainMenuControl <..> QuestionManagerController : <navigate>

QuizGameController "1" --> "-view" QuizGameView
QuizGameController "1" --> "-model" QuizGameModel
QuizGameModel ..> DatabaseManager
QuizGameView ..> Question
QuizGameModel --> Question : \-questions 0..*

WordleGameController "1" --> "-view" WordleGameView
WordleGameController "1" --> "-model" WordleGameModel
WordleGameModel ..> DatabaseManager
WordleGameModel --> Question

QuestionManagerController "1" --> "-view" QuestionManagerView
QuestionManagerController "1" --> "-model" QuestionManagerModel
QuestionManagerModel ..> DatabaseManager
QuestionManagerView ..> Question
QuestionManagerModel --> Question: \-questions 0..*

DatabaseManager ..> Question
DatabaseManager ..> QuestionsDB : manages >
QuestionsDB o--> Question : 0..*



@enduml
